docs: document configurable timeouts, ZGC tuning, and macOS CLI install
- Ch 10: add macOS install note (codesign, xattr stripping)
- Ch 12: add fault tolerance timeout configuration section
- Ch 12: add JVM tuning section (ZGC for sub-ms GC pauses)
- Ch 12: add CLI binary killed on macOS troubleshooting
- Ch  4: add ZGC tip for tail latency mitigation
- App B: add CLI killed and stress test variance entries